--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Road+Rage&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -30,15 +32,28 @@ body {
 } */
 
 .navbar {
-  padding: 0.6rem 1rem;
+  padding: 0.8rem 2rem;
   background-color: rgba(6, 12, 46, 0.404);
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar h3 {
+  color: white;
+  font-weight: 400;
+  font-family: 'Road Rage', cursive;
+  letter-spacing: 0.2rem;
+}
+
+.navbar Link li{
+  text-decoration: none;
 }
 
 .navbar .grid-container {
-
-  display: inline-grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: grid;
+  grid-template-columns:  1fr 1fr 1fr;
   grid-gap: 0.5rem;
   list-style: none;
   justify-content: space-around;
@@ -52,7 +67,23 @@ body {
   padding: 0.2rem 0.6rem;
   border-radius: 0.3rem;
   font-size: 0.7rem;
+  display: inline-block;
 }
+
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.navbar ul li:hover {
+  
+  background-color: rgb(59, 99, 160)
+
+}
+
+
 
 /* USERS CHOICE SECTION */
 
@@ -81,7 +112,7 @@ body {
 
 .choice {
   font-size: 1.5rem;
-  padding: 0.8rem;
+  padding: 0.8rem 1.5rem;
   margin: 0.3rem 0.3rem;
   color:rgba(39, 50, 112, 0.863);
   border-radius:0.2rem;
@@ -135,7 +166,7 @@ body {
 }
 
 
-/* USER VS BOT CHOICE & CONCLUSION SECTION */
+/* RESULTS SECTION - USER VS BOT CHOICE & CONCLUSION SECTION - STYLING */
 
 .results-section {
   width: 100%;
@@ -161,8 +192,17 @@ body {
 .user-bot-choices li {
   list-style: none;
   color: rgba(255, 255, 255, 0.836);
-  font-weight: 400;
+  font-weight: 600;
   
+  
+}
+
+.user-bot-choices span {
+  font-weight: bold;
+
+  color: #0cebeb;
+  font-size: 1.2rem;
+  padding: 0 0.5rem  
   
 }
 
@@ -174,7 +214,10 @@ body {
   font-style: italic;
   color: white;
   text-shadow: 2px 1px 6px rgba(243, 241, 223, 0.719);
+
 }
+
+/*  RELOAD SECTION - STYLING */
 
 .reload {
   margin-top: 1rem;
@@ -195,7 +238,123 @@ body {
 .reload a:hover {
   font-size: large;
   color:#ff7f58;
-  transition:0.3s
-  
-  ;
+  transition:0.3s;
 }
+
+/* SCORECARD SECTION - STYLING */
+
+.scoreCard {
+    text-align: center;
+    height: 14rem;
+    margin: 4rem auto;
+
+    background: #1f4037;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #99f2c8, #1f4037);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #99f2c8, #1f4037); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    width: 14rem;
+    padding: 3rem;
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.userscore h4, .botscore h4 {
+  font-family: 'Road Rage', cursive;
+  font-size:3rem;
+  letter-spacing:0.4rem;
+  color:rgb(9, 13, 22);
+}
+
+/* RULES SECTION - STYLING */
+
+.rules {
+  
+    /* width: 2; */
+    width: 30rem;
+    height: 30rem;
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    /* border-radius: 5%; */
+
+   
+  
+}
+
+.rules img {
+  width: 20rem;
+  opacity: 0.9;
+}
+
+.rule-statements {
+  text-align: center;
+  padding: 0.4rem 0;
+}
+.rule-statements ul li {
+  color: rgba(255, 255, 255, 0.822);
+  font-weight: 600;
+  font-size: 3rem;
+  font-family:Arial, Helvetica, sans-serif;
+  list-style: none;
+  font-family: 'Road Rage', cursive;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+
+}
+
+/*  RESPONSIVENESS */
+
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 80%;
+  }
+
+  .rules {
+    width: 20rem;
+    height: 30rem;
+  }
+
+  .rules img {
+    width: 10rem;
+    opacity: 0.9;
+  }
+
+  .rule-statements ul li {
+    font-size: 1.9rem;
+  }
+
+  .navbar {
+    flex-direction: column;
+  }
+  .navbar h3 {
+    margin-bottom: 0.8rem;
+  }
+
+  .scoreCard {
+    width: 60%;
+  }
+}
+
+
+@media screen and (max-width: 670px) {
+  html {
+    font-size: 85%;
+  }
+}
+@media screen and (max-width: 970px) {
+  html {
+    font-size: 90%;
+  }
+}
+@media screen and (max-width: 1370px) {
+  html {
+    font-size: 93%;
+  }
+}
+
